syntax = "proto3";

option go_package = "./chat_ucode";


// The service definition.
service ChatService {
    rpc CreateChat (CreateChatRequest) returns (CreateChatResponse) {}
    // rpc GetChatById (GetChatByIDRequest) returns (GetChatByIDResponse) {} 
    // rpc GetChatList (GetChatListRequest) returns (GetChatListResponse) {}
    rpc GetListByChatId (GetListByChatIdRequest) returns (GetChatListResponse) {}
    rpc GetListByProjectId (GetListByProjectIdRequest) returns (GetChatListResponse) {}
}

// Chat ...
message Chat { 
    string chatid = 1;
    string message_sender_name = 2;
    string messages = 3;
    string types = 4;
    string project_id = 5;
    string created_at = 6;
}

message CreateChatRequest{
    string chatid = 1;
    string message_sender_name = 2;
    string messages = 3;
    string types = 4;
    string project_id = 5;
    string created_at = 6;
}

message CreateChatResponse{
    string chatid = 1;
}


message GetChatByIDRequest{
    string chatid = 1;
}

// message GetChatByIDResponse{
//     Chat chat =1;
// }


// message GetChatListRequest{
//     int32 offset = 1;
//     int32 limit = 2;
//     string search = 3;
// }

message GetChatListResponse{
    repeated Chat chats = 1;
}

message GetListByChatIdRequest{
    int32 offset = 1;
    int32 limit = 2;
    string search = 3;
    string chatid=4;
}

message GetListByProjectIdRequest{
    int32 offset = 1;
    int32 limit = 2;
    string search = 3;
    string project=4;
}


