syntax="proto3";

package note_service;
option go_package="genproto/template_service";

import "google/protobuf/empty.proto";
// import "google/protobuf/struct.proto";


service NoteFolderService {
    // note rpc methods
    rpc CreateNote(CreateNoteReq) returns (Note) {}
    rpc GetListNote(GetListNoteReq) returns (GetListNoteRes) {}
    rpc GetSingleNote(GetSingleNoteReq) returns (Note) {}
    rpc UpdateNote(UpdateNoteReq) returns (Note) {}
    rpc DeleteNote(DeleteNoteReq) returns (google.protobuf.Empty) {}
    rpc GetNoteObjectCommits(GetNoteObjectCommitsReq) returns (GetListNoteRes) {}

    // folder rpc methods
    rpc CreateFolderNote(CreateFolderNoteReq) returns (FolderNote) {}
    rpc GetListFolderNote(GetListFolderNoteReq) returns (GetListFolderNoteRes) {}
    rpc GetSingleFolderNote(GetSingleFolderNoteReq) returns (GetSingleFolderNoteRes) {}
    rpc UpdateFolderNote(UpdateFolderNoteReq) returns (FolderNote) {}
    rpc DeleteFolderNote(DeleteFolderNoteReq) returns (google.protobuf.Empty) {}
    rpc GetNoteFolderObjectCommits(GetNoteFolderObjectCommitsReq) returns (GetListFolderNoteRes) {}
}

message GetNoteObjectCommitsReq {
    string project_id = 1;
    string id = 2;
    string version_id = 3;
}

message GetNoteFolderObjectCommitsReq {
    string project_id = 1;
    string id = 2;
    string version_id = 3;
}

message DeleteNoteReq {
    string project_id = 1;
    string id = 2;
    string version_id = 3;
}

message UpdateNoteReq {
    message Table {
        message Relation {
            string relation_id = 1;
        }
        string table_id = 1;
        string type = 2;
        string object_id = 3;
        string filter = 4;
        repeated Relation relations = 5;
    }
    string id = 1;
    string project_id = 2;
    string title = 3;
    string html = 4;
    string folder_id = 5;
    string size = 6;
    repeated Table tables = 7;
    string commit_id = 8;
    string version_id = 9;
}

message GetSingleNoteReq {
    string project_id = 1;
    string id = 2;
    string version_id = 3;
}

message GetListNoteReq {
    string project_id = 1;
    string folder_id = 2;
    int32 limit = 3;
    int32 offset = 4;
    string version_id = 5;
}

message GetListNoteRes {
    repeated Note notes = 1;
    int32 count = 2;
}

message CreateNoteReq {
    message Table {
        message Relation {
            string relation_id = 1;
        }
        string table_id = 1;
        string type = 2;
        string object_id = 3;
        string filter = 4;
        repeated Relation relations = 5;
    }
    string project_id = 1;
    string title = 2;
    string html = 3;
    string folder_id = 4;
    string size = 5;
    repeated Table tables = 6;
    string commit_id = 7;
    string version_id = 8;
}

message Note {
    message Table {
        message Relation {
            string relation_id = 1;
        }
        string table_id = 1;
        string type = 2;
        string object_id = 3;
        string filter = 4;
        repeated Relation relations = 5;
    }
    string id = 1;
    string project_id = 2;
    string title = 3;
    string html = 4;
    string folder_id = 5;
    string size = 6;
    repeated Table tables = 7;
    string commit_id = 8;
    string version_id = 9;
}

message CreateFolderNoteReq {
    string project_id = 1;
    string title = 2;
    string parent_id = 3;
    string commit_id = 4;
    string version_id = 5;
}

message FolderNote {
    string id = 1;
    string project_id = 2;
    string title = 3;
    string parent_id = 4;
    string commit_id = 5;
    string version_id = 6;
}

message GetListFolderNoteReq {
    string project_id = 1;
    int32 limit = 2;
    int32 offset = 3;
    string version_id = 4;
}

message GetListFolderNoteRes {
    repeated FolderNote folders = 1;
    int32 count = 2;
}

message GetSingleFolderNoteReq {
    string id = 1;
    string project_id = 2;
    string version_id = 3;
}

message GetSingleFolderNoteRes {
    repeated FolderNote folders = 1;
    int32 count = 2;
}

message UpdateFolderNoteReq {
    string id = 1;
    string project_id = 2;
    string title = 3;
    string parent_id = 4;
    string commit_id = 5;
    string version_id = 6;
}

message DeleteFolderNoteReq {
    string id = 1;
    string project_id = 2;
    string version_id = 3;
}